fixed spacing on new card page

--- a/src/components/pages/newCardPage/newCardPage.css
+++ b/src/components/pages/newCardPage/newCardPage.css
@@ -4,7 +4,7 @@
 
 .previewBox {
     /* border: 2px red solid; */
-    margin-top: 70px;
+    margin-top: 130px;
     padding: 10px;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -13,6 +13,7 @@
 .preview-border{
     height: 400px;
     width: 100%;
+    /* border: 2px orange solid; */
 }
 
 .input-field {
@@ -32,15 +33,10 @@
     min-width: 200px;
 }
 
-.options {
-    /* border: 2px aqua solid; */
-}
+/* .options {
+    border: 2px aqua solid;
+} */
 
-.preview {
-    /* border: 2px darkorange solid; */
-    height: 400px;
-    width: 85%;
-} 
 
 .submit {
     margin-top: 20px;
